Project

General

Profile

Actions

Bug #59433

open

s3 error response missing Message field

Added by Casey Bodley about 1 year ago. Updated about 1 year ago.

Status:
Pending Backport
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
s3 low-hanging-fruit backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

some clients like veeam fail to decode the xml Error response if it's missing the Message field


Related issues 5 (2 open3 closed)

Related to rgw - Backport #59528: pacific: s3 error response missing Message fieldDuplicateCory SnyderActions
Related to rgw - Bug #65794: Ceph Reef RGW error response fails to be parsed during awscli create-bucketNew

Actions
Copied to rgw - Backport #59613: pacific: s3 error response missing Message fieldResolvedCory SnyderActions
Copied to rgw - Backport #59614: reef: s3 error response missing Message fieldResolvedCasey BodleyActions
Copied to rgw - Backport #59615: quincy: s3 error response missing Message fieldIn ProgressMykola GolubActions
Actions #1

Updated by David Orman about 1 year ago

Casey Bodley wrote:

some clients like veeam fail to decode the xml Error response if it's missing the Message field

More detail, example requests from Amazon S3:

b'\n<Error><Code>NoSuchKey</Code><Message>The specified key does not exist.</Message><Key>test</Key><RequestId>XXXXXXXXX</RequestId><HostId>XXXXXXXXXXXX</HostId></Error>'

b'\n<Error><Code>NoSuchBucket</Code><Message>The specified bucket does not exist</Message><BucketName>ldkjfkldjflk</BucketName><RequestId>XXXXXXXXXXXXXXXXXXXXXX</RequestId><HostId>XXXXXXXXXXXXXXX</HostId></Error>'

Actions #2

Updated by Casey Bodley about 1 year ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 51052
Actions #3

Updated by Cory Snyder about 1 year ago

  • Related to Backport #59528: pacific: s3 error response missing Message field added
Actions #4

Updated by Casey Bodley about 1 year ago

  • Assignee set to Casey Bodley
Actions #5

Updated by Casey Bodley about 1 year ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59613: pacific: s3 error response missing Message field added
Actions #7

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59614: reef: s3 error response missing Message field added
Actions #8

Updated by Backport Bot about 1 year ago

  • Copied to Backport #59615: quincy: s3 error response missing Message field added
Actions #9

Updated by Backport Bot about 1 year ago

  • Tags changed from s3 low-hanging-fruit to s3 low-hanging-fruit backport_processed
Actions #10

Updated by Casey Bodley about 12 hours ago

  • Related to Bug #65794: Ceph Reef RGW error response fails to be parsed during awscli create-bucket added
Actions

Also available in: Atom PDF